# spec2schematic

./: .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: rendering-notes.md
examples/: divider.yaml  dol_starter.yaml  tank_level.yaml
mcp_server/: __init__.py  server.py
service/: __init__.py  main.py
service/static/: index.html
spec2schematic/: __init__.py  cli.py  erc.py  layout.py  lint.py  provenance.py  render_dxf.py  render_svg.py  schema.py
tests/: conftest.py  test_cli.py  test_erc.py  test_examples.py  test_golden.py  test_layout.py  test_lint.py  test_mcp_server.py  test_provenance.py  test_render_dxf.py  test_render_svg.py  test_schema.py  test_service.py
tests/data/: cable_pair.yaml
