[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spec2schematic"
version = "0.1.0"
description = "Turn a YAML wiring spec into checked, deterministic schematic diagrams."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Salih Ibrahim Uslucan" }]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]
dxf = ["ezdxf>=1.0"]
service = ["fastapi>=0.110", "uvicorn>=0.29"]
mcp = ["mcp>=1.0"]

[project.scripts]
spec2schematic = "spec2schematic.cli:main"

[tool.setuptools]
packages = ["spec2schematic"]
